Fix CORS issue for Vercel